finish index.html with vue.js

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ http://www.templatemo.com/preview/templatemo_428_kool_store
                 <div class="row">
                     <div class="col-md-4 col-sm-6 col-xs-8">
                         <div class="logo">
-                            <h1><a href="#">BagBuy</a></h1>
+                            <h1 ><a href="#">BagBuy</a></h1>
                         </div> <!-- /.logo -->
                     </div> <!-- /.col-md-4 -->
                     <div class="col-md-8 col-sm-6 col-xs-4">
@@ -99,87 +99,39 @@ http://www.templatemo.com/preview/templatemo_428_kool_store
     <div class="content-section">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 section-title">
+                <div class="col-md-10 section-title">
                     <h2>View Needs</h2>
-                </div> <!-- /.section -->
+                </div>
+                <div>
+                    <div class="btn-group">
+                        <button 
+                            class="darkBtn dropdown-toggle" 
+                            id="RegoinMenu"
+                            data-toggle="dropdown" 
+                            aria-haspopup="true" 
+                            aria-expanded="false">
+                            Regoin
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="RegoinMenu">
+                            <a href="#">All</a>
+                            <a href="#">Netherlands</a>
+                            <a href="#">US</a>
+                            <a href="#">UK</a>
+                        </div>
+                    </div>
+                </div>
             </div> <!-- /.row -->
-            <div class="row">
-                <div class="col-md-3 col-sm-6">
-                    <div class="product-item">
-                        <div class="product-thumb">
-                            <img src="images/pineAppleCake.jpg" alt="">
-                        </div> <!-- /.product-thum -->
-                        <div class="product-content">
-                            <h5><a href="#">鳳梨酥</a></h5>
-                            <span class="price">$40.00</span>
-                        </div> <!-- /.product-content -->
-                    </div> <!-- /.product-item -->
-                </div> <!-- /.col-md-3 -->
-                <div class="col-md-3 col-sm-6">
+            <div class="row" id="Needs" >
+                <div class="col-md-3 col-sm-6" v-for="need in needs">
                     <div class="product-item">
                         <div class="product-thumb">
                             <a href="product-detail.html">
-                                <img src="images/cakeRoll.jpg" alt="">
+                                <img :src="'images/' + need.imgSrc" alt="">
                             </a>
                         </div> <!-- /.product-thum -->
                         <div class="product-content">
-                            <h5><a href="#">奶凍捲</a></h5>
-                            <span class="price">$150.00</span>
-                        </div> <!-- /.product-content -->
-                    </div> <!-- /.product-item -->
-                </div> <!-- /.col-md-3 -->
-                <div class="col-md-3 col-sm-6">
-                    <div class="product-item">
-                        <div class="product-thumb">
-                            <img src="images/mooncake.jpg" alt="">
-                        </div> <!-- /.product-thum -->
-                        <div class="product-content">
-                            <h5><a href="#">月餅</a></h5>
-                            <span class="price">$40.00</span>
-                        </div> <!-- /.product-content -->
-                    </div> <!-- /.product-item -->
-                </div> <!-- /.col-md-3 -->
-                <div class="col-md-3 col-sm-6">
-                    <div class="product-item">
-                        <div class="product-thumb">
-                            <img src="images/pineAppleCake.jpg" alt="">
-                        </div> <!-- /.product-thum -->
-                        <div class="product-content">
-                            <h5><a href="#">鳳梨酥</a></h5>
-                            <span class="price">$60.00</span>
-                        </div> <!-- /.product-content -->
-                    </div> <!-- /.product-item -->
-                </div> <!-- /.col-md-3 -->
-                <div class="col-md-3 col-sm-6">
-                    <div class="product-item">
-                        <div class="product-thumb">
-                            <img src="images/cakeRoll.jpg" alt="">
-                        </div> <!-- /.product-thum -->
-                        <div class="product-content">
-                            <h5><a href="#">奶凍捲</a></h5>
-                            <span class="price">$150.00</span>
-                        </div> <!-- /.product-content -->
-                    </div> <!-- /.product-item -->
-                </div> <!-- /.col-md-3 -->
-                <div class="col-md-3 col-sm-6">
-                    <div class="product-item">
-                        <div class="product-thumb">
-                            <img src="images/mooncake.jpg" alt="">
-                        </div> <!-- /.product-thum -->
-                        <div class="product-content">
-                            <h5><a href="#">月餅</a></h5>
-                            <span class="price">$80.00</span>
-                        </div> <!-- /.product-content -->
-                    </div> <!-- /.product-item -->
-                </div> <!-- /.col-md-3 -->
-                <div class="col-md-3 col-sm-6">
-                    <div class="product-item">
-                        <div class="product-thumb">
-                            <img src="images/pineAppleCake.jpg" alt="">
-                        </div> <!-- /.product-thum -->
-                        <div class="product-content">
-                            <h5><a href="#">鳳梨酥</a></h5>
-                            <span class="price">$60.00</span>
+                            <h5> {{need.name}} </h5>
+                            <span class="price">${{need.price}}</span>
                         </div> <!-- /.product-content -->
                     </div> <!-- /.product-item -->
                 </div> <!-- /.col-md-3 -->
@@ -191,44 +143,28 @@ http://www.templatemo.com/preview/templatemo_428_kool_store
         <div class="main-footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <div class="footer-widget">
                             <h3 class="widget-title">About Us</h3>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, debitis recusandae.
                             <ul class="follow-us">
                                 <li><a href="#"><i class="fa fa-facebook"></i>Facebook</a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i>Twitter</a></li>
                             </ul> <!-- /.follow-us -->
                         </div> <!-- /.footer-widget -->
-                    </div> <!-- /.col-md-3 -->
-                    <div class="col-md-3">
+                    </div> <!-- /.col-md-4 -->
+                    <div class="col-md-4">
                         <div class="footer-widget">
                             <h3 class="widget-title">Why Choose Us?</h3>
                             Kool Store is free responsive eCommerce template provided by templatemo website. You can use this layout for any website.
-                            <br><br>Tempore cum mollitia eveniet laboriosam corporis voluptas earum voluptate. Lorem ipsum dolor sit amet.
-                            <br><br>Credit goes to <a rel="nofollow" href="http://unsplash.com">Unsplash</a> for all images.
                         </div> <!-- /.footer-widget -->
-                    </div> <!-- /.col-md-3 -->
-                    <div class="col-md-2">
-                        <div class="footer-widget">
-                            <h3 class="widget-title">Useful Links</h3>
-                            <ul>
-                                <li><a href="#">Our Shop</a></li>
-                                <li><a href="#">Partners</a></li>
-                                <li><a href="#">Gift Cards</a></li>
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Help</a></li>
-                            </ul>
-                        </div> <!-- /.footer-widget -->
-                    </div> <!-- /.col-md-2 -->
+                    </div> <!-- /.col-md-4 -->
                     <div class="col-md-4">
                         <div class="footer-widget">
-                            <h3 class="widget-title">Our Newsletter</h3>
+                            <h3 class="widget-title">Report Problem</h3>
                             <div class="newsletter">
                                 <form action="#" method="get">
-                                    <p>Sign up for our regular updates to know when new products are released.</p>
-                                    <input type="text" title="Email" name="email" placeholder="Your Email Here">
-                                    <input type="submit" class="s-button" value="Submit" name="Submit">
+                                    <p>If you have any concern about our site, please do not hesitate to inform us</p>
+                                    <button class="darkBtn">Report</button>
                                 </form>
                             </div> <!-- /.newsletter -->
                         </div> <!-- /.footer-widget -->
@@ -241,7 +177,6 @@ http://www.templatemo.com/preview/templatemo_428_kool_store
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <span>Copyright &copy; 2084 <a href="#">Company Name</a></span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, expedita soluta mollitia accusamus ut architecto maiores cum fugiat. Pariatur ipsum officiis fuga deleniti alias quia nostrum veritatis enim doloremque eligendi?</p>
                     </div> <!-- /.col-md-12 -->
                 </div> <!-- /.row -->
             </div> <!-- /.container -->
@@ -256,6 +191,8 @@ http://www.templatemo.com/preview/templatemo_428_kool_store
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
 
+    <script src="js/vue.js"></script>
+    <script src="js/index.js"></script>
 
 </body>
 </html>
