--- a/product-detail.html
+++ b/product-detail.html
@@ -61,7 +61,7 @@ http://www.templatemo.com/preview/templatemo_428_kool_store
                 <div class="row">
                     <div class="col-md-4 col-sm-6 col-xs-8">
                         <div class="logo">
-                            <h1><a href="#">Kool Store</a></h1>
+                            <h1><a href="#">BAGBUY</a></h1>
                         </div> <!-- /.logo -->
                     </div> <!-- /.col-md-4 -->
                     <div class="col-md-8 col-sm-6 col-xs-4">
@@ -108,21 +108,17 @@ http://www.templatemo.com/preview/templatemo_428_kool_store
             <div class="row">
                 <div class="col-md-8">
                     <div class="product-image">
-                        <img src="images/featured/7.jpg" alt="">
+                        <img src="images/cakeRoll.jpg" alt="">
                     </div> <!-- /.product-image -->
                     <div class="product-information">
-                        <h2>Product Title Goes Here</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, esse, excepturi, sint ut et numquam reiciendis nulla in deserunt quaerat provident obcaecati reprehenderit iusto ab neque corporis id temporibus architecto quia adipisci? Officia, aliquam, eveniet, molestias, voluptate porro assumenda error soluta ab blanditiis voluptatum nisi voluptates debitis doloribus. Asperiores, provident fuga quibusdam id tenetur!<br><br>Nostrum quis quo earum enim suscipit molestiae cupiditate reprehenderit? Atque, numquam nostrum adipisci suscipit exercitationem sed ullam. Odio, laborum, obcaecati harum nostrum pariatur ipsam itaque minima atque expedita at amet dignissimos odit quisquam laboriosam eius officiis ratione alias sint rerum distinctio. Quidem, veritatis consequuntur voluptas sunt quo deleniti reprehenderit deserunt atque minus non.</p>
+                        <h2>諾貝爾奶凍卷</h2>
+                        <p>購買地址:<br>宜蘭縣羅東鎮公正路188號(羅東店)<br>宜蘭縣礁溪鄉礁溪路四段68號(礁溪店)</p>
                         <p class="product-infos">
-                            <span>Bundle Price: $450</span>
-                            <span>Discount: 30%</span>
+                            <span><br><br>購買數量：1條<br><br>價錢: $150.00</span>
                         </p>
                         <ul class="product-buttons">
                             <li>
-                                <a href="#" class="main-btn">Buy Now</a>
-                            </li>
-                            <li>
-                                <a href="#" class="main-btn">Add to Cart</a>
+                                <a href="#" class="main-btn">我要代購</a>
                             </li>
                         </ul>
                     </div> <!-- /.product-information -->
@@ -130,35 +126,32 @@ http://www.templatemo.com/preview/templatemo_428_kool_store
                 <div class="col-md-4 col-sm-8">
                     <div class="product-item-2">
                         <div class="product-thumb">
-                            <img src="images/featured/1.jpg" alt="Product Title">
+                            <img src="images/cakeRoll.jpg" alt="Product Title">
                         </div> <!-- /.product-thumb -->
                         <div class="product-content overlay">
-                            <h5><a href="#">Name Of Shirt</a></h5>
-                            <span class="tagline">Partner Name</span>
-                            <span class="price">$30.00</span>
-                            <p>Doloremque quo possimus quas necessitatibus blanditiis excepturi. Commodi, sunt tenetur deleniti labore!</p>
+                            <h5><a href="#">奶凍卷</a></h5>
+                            <span class="price">$150.00</span>
+                            <p>...詳細資訊...</p>
                         </div> <!-- /.product-content -->
                     </div> <!-- /.product-item-2 -->
                     <div class="product-item-2">
                         <div class="product-thumb">
-                            <img src="images/featured/2.jpg" alt="Product Title">
+                            <img src="images/pineAppleCake.jpg" alt="Product Title">
                         </div> <!-- /.product-thumb -->
                         <div class="product-content overlay">
-                            <h5><a href="#">Name Of Shirt</a></h5>
-                            <span class="tagline">Partner Name</span>
+                            <h5><a href="#">鳳梨酥</a></h5>
                             <span class="price">$40.00</span>
-                            <p>Doloremque quo possimus quas necessitatibus blanditiis excepturi. Commodi, sunt tenetur deleniti labore!</p>
+                            <p>...詳細資訊...</p>
                         </div> <!-- /.product-content -->
                     </div> <!-- /.product-item-2 -->
                     <div class="product-item-2">
                         <div class="product-thumb">
-                            <img src="images/featured/8.jpg" alt="Product Title">
+                            <img src="images/mooncake.jpg" alt="Product Title">
                         </div> <!-- /.product-thumb -->
                         <div class="product-content overlay">
-                            <h5><a href="#">Name Of Shirt</a></h5>
-                            <span class="tagline">Partner Name</span>
-                            <span class="price">$50.00</span>
-                            <p>Doloremque quo possimus quas necessitatibus blanditiis excepturi. Commodi, sunt tenetur deleniti labore!</p>
+                            <h5><a href="#">月餅</a></h5>
+                            <span class="price">$35.00</span>
+                            <p>...詳細資訊...</p>
                         </div> <!-- /.product-content -->
                     </div> <!-- /.product-item-2 -->
                 </div> <!-- /.col-md-4 -->
@@ -166,204 +159,32 @@ http://www.templatemo.com/preview/templatemo_428_kool_store
         </div> <!-- /.container -->
     </div> <!-- /.content-section -->
 
-    <div class="content-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 section-title">
-                    <h2>Vote For Future Products</h2>
-                </div> <!-- /.section -->
-            </div> <!-- /.row -->
-            <div class="row">
-                <div class="col-md-3 col-sm-6">
-                    <div class="product-item-vote">
-                        <div class="product-thumb">
-                            <img src="images/products/1.jpg" alt="">
-                        </div> <!-- /.product-thum -->
-                        <div class="product-content">
-                            <h5><a href="#">Name of Shirt</a></h5>
-                            <span class="tagline">By: Catherine</span>
-                            <ul class="progess-bars">
-                                <li>
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"></div>
-                                        <span>4<i class="fa fa-heart"></i></span>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="progress">
-                                        <div class="progress-bar comments" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
-                                        <span class="comments">6<i class="fa fa-heart"></i></span>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div> <!-- /.product-content -->
-                    </div> <!-- /.product-item-vote -->
-                </div> <!-- /.col-md-3 -->
-                <div class="col-md-3 col-sm-6">
-                    <div class="product-item-vote">
-                        <div class="product-thumb">
-                            <img src="images/products/2.jpg" alt="">
-                        </div> <!-- /.product-thum -->
-                        <div class="product-content">
-                            <h5><a href="#">Name of Shirt</a></h5>
-                            <span class="tagline">By: Rebecca</span>
-                            <ul class="progess-bars">
-                                <li>
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"></div>
-                                        <span>4<i class="fa fa-heart"></i></span>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="progress">
-                                        <div class="progress-bar comments" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
-                                        <span class="comments">6<i class="fa fa-heart"></i></span>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div> <!-- /.product-content -->
-                    </div> <!-- /.product-item-vote -->
-                </div> <!-- /.col-md-3 -->
-                <div class="col-md-3 col-sm-6">
-                    <div class="product-item-vote">
-                        <div class="product-thumb">
-                            <img src="images/products/3.jpg" alt="">
-                        </div> <!-- /.product-thum -->
-                        <div class="product-content">
-                            <h5><a href="#">Name of Shirt</a></h5>
-                            <span class="tagline">By: Catherine</span>
-                            <ul class="progess-bars">
-                                <li>
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"></div>
-                                        <span>4<i class="fa fa-heart"></i></span>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="progress">
-                                        <div class="progress-bar comments" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
-                                        <span class="comments">6<i class="fa fa-heart"></i></span>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div> <!-- /.product-content -->
-                    </div> <!-- /.product-item-vote -->
-                </div> <!-- /.col-md-3 -->
-                <div class="col-md-3 col-sm-6">
-                    <div class="product-item-vote">
-                        <div class="product-thumb">
-                            <img src="images/products/4.jpg" alt="">
-                        </div> <!-- /.product-thum -->
-                        <div class="product-content">
-                            <h5><a href="#">Name of Shirt</a></h5>
-                            <span class="tagline">By: Rebecca</span>
-                            <ul class="progess-bars">
-                                <li>
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"></div>
-                                        <span>4<i class="fa fa-heart"></i></span>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="progress">
-                                        <div class="progress-bar comments" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
-                                        <span class="comments">6<i class="fa fa-heart"></i></span>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div> <!-- /.product-content -->
-                    </div> <!-- /.product-item-vote -->
-                </div> <!-- /.col-md-3 -->
-            </div> <!-- /.row -->
-        </div> <!-- /.container -->
-    </div> <!-- /.content-section -->
-
     <footer class="site-footer">
-        <div class="our-partner">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="customNavigation">
-                            <a class="btn prev"><i class="fa fa-angle-left"></i></a>
-                            <a class="btn next"><i class="fa fa-angle-right"></i></a>
-                        </div>
-                        <div id="owl-demo" class="owl-carousel">
-                            <div class="item"> 
-                            	<a href="#"><img src="images/tm-170x80-1.jpg" alt=""></a>
-                          	</div>
-                            <div class="item">
-                                <a href="#"><img src="images/tm-170x80-2.jpg" alt=""></a>
-                            </div>
-                            <div class="item">
-                                <a href="#"><img src="images/tm-170x80-1.jpg" alt=""></a>
-                            </div>
-                            <div class="item">
-                                <a href="#"><img src="images/tm-170x80-2.jpg" alt=""></a>
-                            </div>
-                            <div class="item">
-                                <a href="#"><img src="images/tm-170x80-1.jpg" alt=""></a>
-                            </div>
-                            <div class="item">
-                                <a href="#"><img src="images/tm-170x80-2.jpg" alt=""></a>
-                            </div>
-                            <div class="item">
-                                <a href="#"><img src="images/tm-170x80-1.jpg" alt=""></a>
-                            </div>
-                            <div class="item">
-                                <a href="#"><img src="images/tm-170x80-2.jpg" alt=""></a>
-                            </div>
-                            <div class="item">
-                                <a href="#"><img src="images/tm-170x80-1.jpg" alt=""></a>
-                            </div>
-                            <div class="item">
-                                <a href="#"><img src="images/tm-170x80-2.jpg" alt=""></a>
-                            </div>
-                        </div> <!-- /#owl-demo -->
-                    </div> <!-- /.col-md-12 -->
-                </div> <!-- /.row -->
-            </div> <!-- /.container -->
-        </div> <!-- /.our-partner -->
         <div class="main-footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <div class="footer-widget">
                             <h3 class="widget-title">About Us</h3>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, debitis recusandae.
                             <ul class="follow-us">
                                 <li><a href="#"><i class="fa fa-facebook"></i>Facebook</a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i>Twitter</a></li>
                             </ul> <!-- /.follow-us -->
                         </div> <!-- /.footer-widget -->
-                    </div> <!-- /.col-md-3 -->
-                    <div class="col-md-3">
+                    </div> <!-- /.col-md-4 -->
+                    <div class="col-md-4">
                         <div class="footer-widget">
                             <h3 class="widget-title">Why Choose Us?</h3>
                             Kool Store is free responsive eCommerce template provided by templatemo website. You can use this layout for any website.
-                            <br><br>Tempore cum mollitia eveniet laboriosam corporis voluptas earum voluptate. Lorem ipsum dolor sit amet.
-                            <br><br>Credit goes to <a rel="nofollow" href="http://unsplash.com">Unsplash</a> for all images.
                         </div> <!-- /.footer-widget -->
-                    </div> <!-- /.col-md-3 -->
-                    <div class="col-md-2">
-                        <div class="footer-widget">
-                            <h3 class="widget-title">Useful Links</h3>
-                            <ul>
-                                <li><a href="#">Our Shop</a></li>
-                                <li><a href="#">Partners</a></li>
-                                <li><a href="#">Gift Cards</a></li>
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Help</a></li>
-                            </ul>
-                        </div> <!-- /.footer-widget -->
-                    </div> <!-- /.col-md-2 -->
+                    </div> <!-- /.col-md-4 -->
                     <div class="col-md-4">
                         <div class="footer-widget">
-                            <h3 class="widget-title">Our Newsletter</h3>
+                            <h3 class="widget-title">Report Problem</h3>
                             <div class="newsletter">
                                 <form action="#" method="get">
-                                    <p>Sign up for our regular updates to know when new products are released.</p>
-                                    <input type="text" title="Email" name="email" placeholder="Your Email Here">
-                                    <input type="submit" class="s-button" value="Submit" name="Submit">
+                                    <p>If you have any concern about our site, please do not hesitate to inform us</p>
+                                    <button class="darkBtn">Report</button>
                                 </form>
                             </div> <!-- /.newsletter -->
                         </div> <!-- /.footer-widget -->
@@ -376,7 +197,6 @@ http://www.templatemo.com/preview/templatemo_428_kool_store
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <span>Copyright &copy; 2084 <a href="#">Company Name</a></span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, expedita soluta mollitia accusamus ut architecto maiores cum fugiat. Pariatur ipsum officiis fuga deleniti alias quia nostrum veritatis enim doloremque eligendi?</p>
                     </div> <!-- /.col-md-12 -->
                 </div> <!-- /.row -->
             </div> <!-- /.container -->
