--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@ http://www.templatemo.com/preview/templatemo_428_kool_store
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800" rel="stylesheet">
+    <!-- <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800" rel="stylesheet"> -->
 
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/normalize.min.css">
@@ -61,7 +61,7 @@ http://www.templatemo.com/preview/templatemo_428_kool_store
                 <div class="row">
                     <div class="col-md-4 col-sm-6 col-xs-8">
                         <div class="logo">
-                            <h1><a href="#">Kool Store</a></h1>
+                            <h1><a href="#">BAGBUY</a></h1>
                         </div> <!-- /.logo -->
                     </div> <!-- /.col-md-4 -->
                     <div class="col-md-8 col-sm-6 col-xs-4">
@@ -89,15 +89,11 @@ http://www.templatemo.com/preview/templatemo_428_kool_store
                             <ul>
                                 <li><a href="index.html">Shop</a></li>
                                 <li><a href="product-detail.html">Details</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="contact.html">Request</a></li>
                             </ul>
                         </div> <!-- /.list-menu -->
                     </div> <!-- /.col-md-6 -->
-                    <div class="col-md-6 col-sm-5">
-                        <div class="notification">
-                            <span>Free Shipping on any order above $50</span>
-                        </div>
-                    </div> <!-- /.col-md-6 -->
+                    
                 </div> <!-- /.row -->
             </div> <!-- /.container -->
         </div> <!-- /.main-nav -->
@@ -106,191 +102,37 @@ http://www.templatemo.com/preview/templatemo_428_kool_store
     <div class="content-section">
         <div class="container">
             <div class="row">
-                <div class="col-md-5 col-sm-6">
-                    <h3 class="widget-title">Contact Us</h3>
+                <!-- <div class="col-md-5 col-sm-6"> -->
+                    <h3 class="widget-title">Request</h3>
                     <div class="contact-form">
                         <form name="contactform" id="contactform" action="#" method="post">
                             <p>
                                 <input name="name" type="text" id="name" placeholder="Your Name">
                             </p>
                             <p>
-                                <input name="email" type="text" id="email" placeholder="Your Email"> 
+                                <input name="email" type="text" id="email" placeholder="What is the Product you need?"> 
                             </p>
                             <p>
-                                <input name="subject" type="text" id="subject" placeholder="Subject"> 
+                                <input name="subject" type="text" id="subject" placeholder="How Many?"> 
                             </p>
                             <p>
-                                <textarea name="message" id="message" placeholder="Message"></textarea>    
+                                <input name="subject" type="text" id="subject" placeholder="How Much will you Pay to the Seller?"> 
                             </p>
-                            <input type="submit" class="mainBtn" id="submit" value="Send Message">
+
+
+                            <p>
+                                <textarea name="message" id="message" placeholder="Message to the Seller"></textarea>    
+                            </p>
+                            <input type="submit" class="mainBtn" id="submit" value="Finish Your Request">
                         </form>
                     </div> <!-- /.contact-form -->
-                </div>
-                <div class="col-md-7 col-sm-6 map-wrapper">
-                    <h3 class="widget-title">Our Location</h3>
-                    <div class="map-holder" style="height: 360px"></div>
-                </div>
+                <!-- </div> -->
             </div>
         </div>
     </div> <!-- /.content-section -->
 
-    <div class="content-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 section-title">
-                    <h2>Vote For Future Products</h2>
-                </div> <!-- /.section -->
-            </div> <!-- /.row -->
-            <div class="row">
-                <div class="col-md-3 col-sm-6">
-                    <div class="product-item-vote">
-                        <div class="product-thumb">
-                            <img src="images/products/1.jpg" alt="">
-                        </div> <!-- /.product-thum -->
-                        <div class="product-content">
-                            <h5><a href="#">Name of Shirt</a></h5>
-                            <span class="tagline">By: JohnDoe</span>
-                            <ul class="progess-bars">
-                                <li>
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"></div>
-                                        <span>3<i class="fa fa-heart"></i></span>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="progress">
-                                        <div class="progress-bar comments" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
-                                        <span class="comments">3<i class="fa fa-heart"></i></span>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div> <!-- /.product-content -->
-                    </div> <!-- /.product-item-vote -->
-                </div> <!-- /.col-md-3 -->
-                <div class="col-md-3 col-sm-6">
-                    <div class="product-item-vote">
-                        <div class="product-thumb">
-                            <img src="images/products/2.jpg" alt="">
-                        </div> <!-- /.product-thum -->
-                        <div class="product-content">
-                            <h5><a href="#">Name of Shirt</a></h5>
-                            <span class="tagline">By: JohnDoe</span>
-                            <ul class="progess-bars">
-                                <li>
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"></div>
-                                        <span>3<i class="fa fa-heart"></i></span>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="progress">
-                                        <div class="progress-bar comments" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
-                                        <span class="comments">3<i class="fa fa-heart"></i></span>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div> <!-- /.product-content -->
-                    </div> <!-- /.product-item-vote -->
-                </div> <!-- /.col-md-3 -->
-                <div class="col-md-3 col-sm-6">
-                    <div class="product-item-vote">
-                        <div class="product-thumb">
-                            <img src="images/products/3.jpg" alt="">
-                        </div> <!-- /.product-thum -->
-                        <div class="product-content">
-                            <h5><a href="#">Name of Shirt</a></h5>
-                            <span class="tagline">By: JohnDoe</span>
-                            <ul class="progess-bars">
-                                <li>
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"></div>
-                                        <span>3<i class="fa fa-heart"></i></span>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="progress">
-                                        <div class="progress-bar comments" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
-                                        <span class="comments">3<i class="fa fa-heart"></i></span>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div> <!-- /.product-content -->
-                    </div> <!-- /.product-item-vote -->
-                </div> <!-- /.col-md-3 -->
-                <div class="col-md-3 col-sm-6">
-                    <div class="product-item-vote">
-                        <div class="product-thumb">
-                            <img src="images/products/4.jpg" alt="">
-                        </div> <!-- /.product-thum -->
-                        <div class="product-content">
-                            <h5><a href="#">Name of Shirt</a></h5>
-                            <span class="tagline">By: JohnDoe</span>
-                            <ul class="progess-bars">
-                                <li>
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"></div>
-                                        <span>3<i class="fa fa-heart"></i></span>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="progress">
-                                        <div class="progress-bar comments" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
-                                        <span class="comments">3<i class="fa fa-heart"></i></span>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div> <!-- /.product-content -->
-                    </div> <!-- /.product-item-vote -->
-                </div> <!-- /.col-md-3 -->
-            </div> <!-- /.row -->
-        </div> <!-- /.container -->
-    </div> <!-- /.content-section -->
 
     <footer class="site-footer">
-        <div class="our-partner">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="customNavigation">
-                            <a class="btn prev"><i class="fa fa-angle-left"></i></a>
-                            <a class="btn next"><i class="fa fa-angle-right"></i></a>
-                        </div>
-                        <div id="owl-demo" class="owl-carousel">
-                            <div class="item"> 
-                            	<a href="#"><img src="images/tm-170x80-1.jpg" alt=""></a>
-                          	</div>
-                            <div class="item">
-                                <a href="#"><img src="images/tm-170x80-2.jpg" alt=""></a>
-                            </div>
-                            <div class="item">
-                                <a href="#"><img src="images/tm-170x80-1.jpg" alt=""></a>
-                            </div>
-                            <div class="item">
-                                <a href="#"><img src="images/tm-170x80-2.jpg" alt=""></a>
-                            </div>
-                            <div class="item">
-                                <a href="#"><img src="images/tm-170x80-1.jpg" alt=""></a>
-                            </div>
-                            <div class="item">
-                                <a href="#"><img src="images/tm-170x80-2.jpg" alt=""></a>
-                            </div>
-                            <div class="item">
-                                <a href="#"><img src="images/tm-170x80-1.jpg" alt=""></a>
-                            </div>
-                            <div class="item">
-                                <a href="#"><img src="images/tm-170x80-2.jpg" alt=""></a>
-                            </div>
-                            <div class="item">
-                                <a href="#"><img src="images/tm-170x80-1.jpg" alt=""></a>
-                            </div>
-                            <div class="item">
-                                <a href="#"><img src="images/tm-170x80-2.jpg" alt=""></a>
-                            </div>
-                        </div> <!-- /#owl-demo -->
-                    </div> <!-- /.col-md-12 -->
-                </div> <!-- /.row -->
-            </div> <!-- /.container -->
-        </div> <!-- /.our-partner -->
         <div class="main-footer">
             <div class="container">
                 <div class="row">
@@ -328,7 +170,7 @@ http://www.templatemo.com/preview/templatemo_428_kool_store
                         <div class="footer-widget">
                             <h3 class="widget-title">Our Newsletter</h3>
                             <div class="newsletter">
-                            	<form action="#" method="get">
+                                <form action="#" method="get">
                                     <p>Sign up for our regular updates to know when new products are released.</p>
                                     <input type="text" title="Email" name="email" placeholder="Your Email Here">
                                     <input type="submit" class="s-button" value="Submit" name="Submit">
