--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@ http://www.templatemo.com/preview/templatemo_428_kool_store
                 <div class="row">
                     <div class="col-md-4 col-sm-6 col-xs-8">
                         <div class="logo">
-                            <h1><a href="#">BAGBUY</a></h1>
+                            <h1 ><a href="#">BagBuy</a></h1>
                         </div> <!-- /.logo -->
                     </div> <!-- /.col-md-4 -->
                     <div class="col-md-8 col-sm-6 col-xs-4">
@@ -71,10 +71,8 @@ http://www.templatemo.com/preview/templatemo_428_kool_store
                             </a>
                             <ul class="menu">
                                 <li><a href="#">Home</a></li>
-                                <li><a href="#">Catalogs</a></li>
-                                <li><a href="#">FAQs</a></li>
-                                <li><a href="#">Policies</a></li>
-                                <li><a href="#">About</a></li>
+                                <li><a href="#">History</a></li>
+                                <li><a href="#">Settings</a></li>
                             </ul>
                         </div> <!-- /.main-menu -->
                     </div> <!-- /.col-md-8 -->
@@ -87,13 +85,12 @@ http://www.templatemo.com/preview/templatemo_428_kool_store
                     <div class="col-md-6 col-sm-7">
                         <div class="list-menu">
                             <ul>
-                                <li><a href="index.html">Shop</a></li>
-                                <li><a href="product-detail.html">Details</a></li>
-                                <li><a href="contact.html">Request</a></li>
+                                <a href="index.html"><li>Shop</li></a>
+                                <a href="product-detail.html"><li>Details</li></a>
+                                <a href="contact.html"><li>Contact</li></a>
                             </ul>
                         </div> <!-- /.list-menu -->
                     </div> <!-- /.col-md-6 -->
-                    
                 </div> <!-- /.row -->
             </div> <!-- /.container -->
         </div> <!-- /.main-nav -->
@@ -136,44 +133,28 @@ http://www.templatemo.com/preview/templatemo_428_kool_store
         <div class="main-footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <div class="footer-widget">
                             <h3 class="widget-title">About Us</h3>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, debitis recusandae.
                             <ul class="follow-us">
                                 <li><a href="#"><i class="fa fa-facebook"></i>Facebook</a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i>Twitter</a></li>
                             </ul> <!-- /.follow-us -->
                         </div> <!-- /.footer-widget -->
-                    </div> <!-- /.col-md-3 -->
-                    <div class="col-md-3">
+                    </div> <!-- /.col-md-4 -->
+                    <div class="col-md-4">
                         <div class="footer-widget">
                             <h3 class="widget-title">Why Choose Us?</h3>
                             Kool Store is free responsive eCommerce template provided by templatemo website. You can use this layout for any website.
-                            <br><br>Tempore cum mollitia eveniet laboriosam corporis voluptas earum voluptate. Lorem ipsum dolor sit amet.
-                            <br><br>Credit goes to <a rel="nofollow" href="http://unsplash.com">Unsplash</a> for all images.
                         </div> <!-- /.footer-widget -->
-                    </div> <!-- /.col-md-3 -->
-                    <div class="col-md-2">
-                        <div class="footer-widget">
-                            <h3 class="widget-title">Useful Links</h3>
-                            <ul>
-                                <li><a href="#">Our Shop</a></li>
-                                <li><a href="#">Partners</a></li>
-                                <li><a href="#">Gift Cards</a></li>
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Help</a></li>
-                            </ul>
-                        </div> <!-- /.footer-widget -->
-                    </div> <!-- /.col-md-2 -->
+                    </div> <!-- /.col-md-4 -->
                     <div class="col-md-4">
                         <div class="footer-widget">
-                            <h3 class="widget-title">Our Newsletter</h3>
+                            <h3 class="widget-title">Report Problem</h3>
                             <div class="newsletter">
                                 <form action="#" method="get">
-                                    <p>Sign up for our regular updates to know when new products are released.</p>
-                                    <input type="text" title="Email" name="email" placeholder="Your Email Here">
-                                    <input type="submit" class="s-button" value="Submit" name="Submit">
+                                    <p>If you have any concern about our site, please do not hesitate to inform us</p>
+                                    <button class="darkBtn">Report</button>
                                 </form>
                             </div> <!-- /.newsletter -->
                         </div> <!-- /.footer-widget -->
@@ -186,7 +167,6 @@ http://www.templatemo.com/preview/templatemo_428_kool_store
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <span>Copyright &copy; 2084 <a href="#">Company Name</a></span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, expedita soluta mollitia accusamus ut architecto maiores cum fugiat. Pariatur ipsum officiis fuga deleniti alias quia nostrum veritatis enim doloremque eligendi?</p>
                     </div> <!-- /.col-md-12 -->
                 </div> <!-- /.row -->
             </div> <!-- /.container -->
