--- a/product-detail.html
+++ b/product-detail.html
@@ -61,7 +61,7 @@ http://www.templatemo.com/preview/templatemo_428_kool_store
                 <div class="row">
                     <div class="col-md-4 col-sm-6 col-xs-8">
                         <div class="logo">
-                            <h1><a href="#">BAGBUY</a></h1>
+                            <h1 ><a href="#">BagBuy</a></h1>
                         </div> <!-- /.logo -->
                     </div> <!-- /.col-md-4 -->
                     <div class="col-md-8 col-sm-6 col-xs-4">
@@ -71,10 +71,8 @@ http://www.templatemo.com/preview/templatemo_428_kool_store
                             </a>
                             <ul class="menu">
                                 <li><a href="#">Home</a></li>
-                                <li><a href="#">Catalogs</a></li>
-                                <li><a href="#">FAQs</a></li>
-                                <li><a href="#">Policies</a></li>
-                                <li><a href="#">About</a></li>
+                                <li><a href="#">History</a></li>
+                                <li><a href="#">Settings</a></li>
                             </ul>
                         </div> <!-- /.main-menu -->
                     </div> <!-- /.col-md-8 -->
@@ -87,16 +85,11 @@ http://www.templatemo.com/preview/templatemo_428_kool_store
                     <div class="col-md-6 col-sm-7">
                         <div class="list-menu">
                             <ul>
-                                <li><a href="index.html">Shop</a></li>
-                                <li><a href="product-detail.html">Details</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <a href="index.html"><li>Shop</li></a>
+                                <a href="product-detail.html"><li>Details</li></a>
+                                <a href="contact.html"><li>Contact</li></a>
                             </ul>
                         </div> <!-- /.list-menu -->
-                    </div> <!-- /.col-md-6 -->
-                    <div class="col-md-6 col-sm-5">
-                        <div class="notification">
-                            <span>Free Shipping on any order above $50</span>
-                        </div>
                     </div> <!-- /.col-md-6 -->
                 </div> <!-- /.row -->
             </div> <!-- /.container -->
